SimpleSQLInterpreter/interpreter/cpp/sqlParser.cpp

// Generated from sqlParser.g4 by ANTLR 4.8


#include "sqlParserListener.h"
#include "sqlParserVisitor.h"

#include "sqlParser.h"


using namespace antlrcpp;
using namespace antlr4;

sqlParser::sqlParser(TokenStream *input) : Parser(input) {
  _interpreter = new atn::ParserATNSimulator(this, _atn, _decisionToDFA, _sharedContextCache);
}

sqlParser::~sqlParser() {
  delete _interpreter;
}

std::string sqlParser::getGrammarFileName() const {
  return "sqlParser.g4";
}

const std::vector<std::string>& sqlParser::getRuleNames() const {
  return _ruleNames;
}

dfa::Vocabulary& sqlParser::getVocabulary() const {
  return _vocabulary;
}


//----------------- RootContext ------------------------------------------------------------------

sqlParser::RootContext::RootContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* sqlParser::RootContext::EOF() {
  return getToken(sqlParser::EOF, 0);
}

sqlParser::SqlStatementsContext* sqlParser::RootContext::sqlStatements() {
  return getRuleContext<sqlParser::SqlStatementsContext>(0);
}


size_t sqlParser::RootContext::getRuleIndex() const {
  return sqlParser::RuleRoot;
}

void sqlParser::RootContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<sqlParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterRoot(this);
}

void sqlParser::RootContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<sqlParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitRoot(this);
}


antlrcpp::Any sqlParser::RootContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<sqlParserVisitor*>(visitor))
    return parserVisitor->visitRoot(this);
  else
    return visitor->visitChildren(this);
}

sqlParser::RootContext* sqlParser::root() {
  RootContext *_localctx = _tracker.createInstance<RootContext>(_ctx, getState());
  enterRule(_localctx, 0, sqlParser::RuleRoot);
  size_t _la = 0;

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(61);
    _errHandler->sync(this);

    _la = _input->LA(1);
    if ((((_la & ~ 0x3fULL) == 0) &&
      ((1ULL << _la) & ((1ULL << sqlParser::SELECT)
      | (1ULL << sqlParser::INSERT)
      | (1ULL << sqlParser::DELETE)
      | (1ULL << sqlParser::DROP)
      | (1ULL << sqlParser::CREATE)
      | (1ULL << sqlParser::QUIT)
      | (1ULL << sqlParser::EXECFILE)
      | (1ULL << sqlParser::SEMICOLON))) != 0)) {
      setState(60);
      sqlStatements();
    }
    setState(63);
    match(sqlParser::EOF);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- SqlStatementsContext ------------------------------------------------------------------

sqlParser::SqlStatementsContext::SqlStatementsContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

std::vector<sqlParser::SqlStatementContext *> sqlParser::SqlStatementsContext::sqlStatement() {
  return getRuleContexts<sqlParser::SqlStatementContext>();
}

sqlParser::SqlStatementContext* sqlParser::SqlStatementsContext::sqlStatement(size_t i) {
  return getRuleContext<sqlParser::SqlStatementContext>(i);
}

std::vector<sqlParser::EmptyStatementContext *> sqlParser::SqlStatementsContext::emptyStatement() {
  return getRuleContexts<sqlParser::EmptyStatementContext>();
}

sqlParser::EmptyStatementContext* sqlParser::SqlStatementsContext::emptyStatement(size_t i) {
  return getRuleContext<sqlParser::EmptyStatementContext>(i);
}

std::vector<tree::TerminalNode *> sqlParser::SqlStatementsContext::SEMICOLON() {
  return getTokens(sqlParser::SEMICOLON);
}

tree::TerminalNode* sqlParser::SqlStatementsContext::SEMICOLON(size_t i) {
  return getToken(sqlParser::SEMICOLON, i);
}


size_t sqlParser::SqlStatementsContext::getRuleIndex() const {
  return sqlParser::RuleSqlStatements;
}

void sqlParser::SqlStatementsContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<sqlParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterSqlStatements(this);
}

void sqlParser::SqlStatementsContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<sqlParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitSqlStatements(this);
}


antlrcpp::Any sqlParser::SqlStatementsContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<sqlParserVisitor*>(visitor))
    return parserVisitor->visitSqlStatements(this);
  else
    return visitor->visitChildren(this);
}

sqlParser::SqlStatementsContext* sqlParser::sqlStatements() {
  SqlStatementsContext *_localctx = _tracker.createInstance<SqlStatementsContext>(_ctx, getState());
  enterRule(_localctx, 2, sqlParser::RuleSqlStatements);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    size_t alt;
    enterOuterAlt(_localctx, 1);
    setState(71);
    _errHandler->sync(this);
    alt = getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 2, _ctx);
    while (alt != 2 && alt != atn::ATN::INVALID_ALT_NUMBER) {
      if (alt == 1) {
        setState(69);
        _errHandler->sync(this);
        switch (_input->LA(1)) {
          case sqlParser::SELECT:
          case sqlParser::INSERT:
          case sqlParser::DELETE:
          case sqlParser::DROP:
          case sqlParser::CREATE:
          case sqlParser::QUIT:
          case sqlParser::EXECFILE: {
            setState(65);
            sqlStatement();
            setState(66);
            match(sqlParser::SEMICOLON);
            break;
          }

          case sqlParser::SEMICOLON: {
            setState(68);
            emptyStatement();
            break;
          }

        default:
          throw NoViableAltException(this);
        } 
      }
      setState(73);
      _errHandler->sync(this);
      alt = getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 2, _ctx);
    }
    setState(78);
    _errHandler->sync(this);
    switch (_input->LA(1)) {
      case sqlParser::SELECT:
      case sqlParser::INSERT:
      case sqlParser::DELETE:
      case sqlParser::DROP:
      case sqlParser::CREATE:
      case sqlParser::QUIT:
      case sqlParser::EXECFILE: {
        setState(74);
        sqlStatement();

        setState(75);
        match(sqlParser::SEMICOLON);
        break;
      }

      case sqlParser::SEMICOLON: {
        setState(77);
        emptyStatement();
        break;
      }

    default:
      throw NoViableAltException(this);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- SqlStatementContext ------------------------------------------------------------------

sqlParser::SqlStatementContext::SqlStatementContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

sqlParser::SelectQueryContext* sqlParser::SqlStatementContext::selectQuery() {
  return getRuleContext<sqlParser::SelectQueryContext>(0);
}

sqlParser::DropIndexQueryContext* sqlParser::SqlStatementContext::dropIndexQuery() {
  return getRuleContext<sqlParser::DropIndexQueryContext>(0);
}

sqlParser::DropTableQueryContext* sqlParser::SqlStatementContext::dropTableQuery() {
  return getRuleContext<sqlParser::DropTableQueryContext>(0);
}

sqlParser::CreateIndexQueryContext* sqlParser::SqlStatementContext::createIndexQuery() {
  return getRuleContext<sqlParser::CreateIndexQueryContext>(0);
}

sqlParser::CreateTableQueryContext* sqlParser::SqlStatementContext::createTableQuery() {
  return getRuleContext<sqlParser::CreateTableQueryContext>(0);
}

sqlParser::InsertQueryContext* sqlParser::SqlStatementContext::insertQuery() {
  return getRuleContext<sqlParser::InsertQueryContext>(0);
}

sqlParser::DeleteQueryContext* sqlParser::SqlStatementContext::deleteQuery() {
  return getRuleContext<sqlParser::DeleteQueryContext>(0);
}

sqlParser::QuitStatementContext* sqlParser::SqlStatementContext::quitStatement() {
  return getRuleContext<sqlParser::QuitStatementContext>(0);
}

sqlParser::ExecfileStatementContext* sqlParser::SqlStatementContext::execfileStatement() {
  return getRuleContext<sqlParser::ExecfileStatementContext>(0);
}


size_t sqlParser::SqlStatementContext::getRuleIndex() const {
  return sqlParser::RuleSqlStatement;
}

void sqlParser::SqlStatementContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<sqlParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterSqlStatement(this);
}

void sqlParser::SqlStatementContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<sqlParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitSqlStatement(this);
}


antlrcpp::Any sqlParser::SqlStatementContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<sqlParserVisitor*>(visitor))
    return parserVisitor->visitSqlStatement(this);
  else
    return visitor->visitChildren(this);
}

sqlParser::SqlStatementContext* sqlParser::sqlStatement() {
  SqlStatementContext *_localctx = _tracker.createInstance<SqlStatementContext>(_ctx, getState());
  enterRule(_localctx, 4, sqlParser::RuleSqlStatement);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    setState(89);
    _errHandler->sync(this);
    switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 4, _ctx)) {
    case 1: {
      enterOuterAlt(_localctx, 1);
      setState(80);
      selectQuery();
      break;
    }

    case 2: {
      enterOuterAlt(_localctx, 2);
      setState(81);
      dropIndexQuery();
      break;
    }

    case 3: {
      enterOuterAlt(_localctx, 3);
      setState(82);
      dropTableQuery();
      break;
    }

    case 4: {
      enterOuterAlt(_localctx, 4);
      setState(83);
      createIndexQuery();
      break;
    }

    case 5: {
      enterOuterAlt(_localctx, 5);
      setState(84);
      createTableQuery();
      break;
    }

    case 6: {
      enterOuterAlt(_localctx, 6);
      setState(85);
      insertQuery();
      break;
    }

    case 7: {
      enterOuterAlt(_localctx, 7);
      setState(86);
      deleteQuery();
      break;
    }

    case 8: {
      enterOuterAlt(_localctx, 8);
      setState(87);
      quitStatement();
      break;
    }

    case 9: {
      enterOuterAlt(_localctx, 9);
      setState(88);
      execfileStatement();
      break;
    }

    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- EmptyStatementContext ------------------------------------------------------------------

sqlParser::EmptyStatementContext::EmptyStatementContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* sqlParser::EmptyStatementContext::SEMICOLON() {
  return getToken(sqlParser::SEMICOLON, 0);
}


size_t sqlParser::EmptyStatementContext::getRuleIndex() const {
  return sqlParser::RuleEmptyStatement;
}

void sqlParser::EmptyStatementContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<sqlParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterEmptyStatement(this);
}

void sqlParser::EmptyStatementContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<sqlParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitEmptyStatement(this);
}


antlrcpp::Any sqlParser::EmptyStatementContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<sqlParserVisitor*>(visitor))
    return parserVisitor->visitEmptyStatement(this);
  else
    return visitor->visitChildren(this);
}

sqlParser::EmptyStatementContext* sqlParser::emptyStatement() {
  EmptyStatementContext *_localctx = _tracker.createInstance<EmptyStatementContext>(_ctx, getState());
  enterRule(_localctx, 6, sqlParser::RuleEmptyStatement);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(91);
    match(sqlParser::SEMICOLON);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- SelectQueryContext ------------------------------------------------------------------

sqlParser::SelectQueryContext::SelectQueryContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* sqlParser::SelectQueryContext::SELECT() {
  return getToken(sqlParser::SELECT, 0);
}

tree::TerminalNode* sqlParser::SelectQueryContext::WILDCARD() {
  return getToken(sqlParser::WILDCARD, 0);
}

tree::TerminalNode* sqlParser::SelectQueryContext::FROM() {
  return getToken(sqlParser::FROM, 0);
}

sqlParser::SelectTargetContext* sqlParser::SelectQueryContext::selectTarget() {
  return getRuleContext<sqlParser::SelectTargetContext>(0);
}

sqlParser::OptionalWhereClauseContext* sqlParser::SelectQueryContext::optionalWhereClause() {
  return getRuleContext<sqlParser::OptionalWhereClauseContext>(0);
}


size_t sqlParser::SelectQueryContext::getRuleIndex() const {
  return sqlParser::RuleSelectQuery;
}

void sqlParser::SelectQueryContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<sqlParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterSelectQuery(this);
}

void sqlParser::SelectQueryContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<sqlParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitSelectQuery(this);
}


antlrcpp::Any sqlParser::SelectQueryContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<sqlParserVisitor*>(visitor))
    return parserVisitor->visitSelectQuery(this);
  else
    return visitor->visitChildren(this);
}

sqlParser::SelectQueryContext* sqlParser::selectQuery() {
  SelectQueryContext *_localctx = _tracker.createInstance<SelectQueryContext>(_ctx, getState());
  enterRule(_localctx, 8, sqlParser::RuleSelectQuery);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(93);
    match(sqlParser::SELECT);
    setState(94);
    match(sqlParser::WILDCARD);
    setState(95);
    match(sqlParser::FROM);
    setState(96);
    selectTarget();
    setState(97);
    optionalWhereClause();
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- SelectTargetContext ------------------------------------------------------------------

sqlParser::SelectTargetContext::SelectTargetContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

sqlParser::TableNameContext* sqlParser::SelectTargetContext::tableName() {
  return getRuleContext<sqlParser::TableNameContext>(0);
}


size_t sqlParser::SelectTargetContext::getRuleIndex() const {
  return sqlParser::RuleSelectTarget;
}

void sqlParser::SelectTargetContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<sqlParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterSelectTarget(this);
}

void sqlParser::SelectTargetContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<sqlParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitSelectTarget(this);
}


antlrcpp::Any sqlParser::SelectTargetContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<sqlParserVisitor*>(visitor))
    return parserVisitor->visitSelectTarget(this);
  else
    return visitor->visitChildren(this);
}

sqlParser::SelectTargetContext* sqlParser::selectTarget() {
  SelectTargetContext *_localctx = _tracker.createInstance<SelectTargetContext>(_ctx, getState());
  enterRule(_localctx, 10, sqlParser::RuleSelectTarget);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(99);
    tableName();
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- OptionalWhereClauseContext ------------------------------------------------------------------

sqlParser::OptionalWhereClauseContext::OptionalWhereClauseContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

sqlParser::WhereClauseContext* sqlParser::OptionalWhereClauseContext::whereClause() {
  return getRuleContext<sqlParser::WhereClauseContext>(0);
}


size_t sqlParser::OptionalWhereClauseContext::getRuleIndex() const {
  return sqlParser::RuleOptionalWhereClause;
}

void sqlParser::OptionalWhereClauseContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<sqlParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterOptionalWhereClause(this);
}

void sqlParser::OptionalWhereClauseContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<sqlParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitOptionalWhereClause(this);
}


antlrcpp::Any sqlParser::OptionalWhereClauseContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<sqlParserVisitor*>(visitor))
    return parserVisitor->visitOptionalWhereClause(this);
  else
    return visitor->visitChildren(this);
}

sqlParser::OptionalWhereClauseContext* sqlParser::optionalWhereClause() {
  OptionalWhereClauseContext *_localctx = _tracker.createInstance<OptionalWhereClauseContext>(_ctx, getState());
  enterRule(_localctx, 12, sqlParser::RuleOptionalWhereClause);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    setState(103);
    _errHandler->sync(this);
    switch (_input->LA(1)) {
      case sqlParser::WHERE: {
        enterOuterAlt(_localctx, 1);
        setState(101);
        whereClause();
        break;
      }

      case sqlParser::SEMICOLON: {
        enterOuterAlt(_localctx, 2);

        break;
      }

    default:
      throw NoViableAltException(this);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- WhereClauseContext ------------------------------------------------------------------

sqlParser::WhereClauseContext::WhereClauseContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* sqlParser::WhereClauseContext::WHERE() {
  return getToken(sqlParser::WHERE, 0);
}

sqlParser::WhereConditionsContext* sqlParser::WhereClauseContext::whereConditions() {
  return getRuleContext<sqlParser::WhereConditionsContext>(0);
}


size_t sqlParser::WhereClauseContext::getRuleIndex() const {
  return sqlParser::RuleWhereClause;
}

void sqlParser::WhereClauseContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<sqlParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterWhereClause(this);
}

void sqlParser::WhereClauseContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<sqlParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitWhereClause(this);
}


antlrcpp::Any sqlParser::WhereClauseContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<sqlParserVisitor*>(visitor))
    return parserVisitor->visitWhereClause(this);
  else
    return visitor->visitChildren(this);
}

sqlParser::WhereClauseContext* sqlParser::whereClause() {
  WhereClauseContext *_localctx = _tracker.createInstance<WhereClauseContext>(_ctx, getState());
  enterRule(_localctx, 14, sqlParser::RuleWhereClause);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(105);
    match(sqlParser::WHERE);
    setState(106);
    whereConditions();
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- WhereConditionsContext ------------------------------------------------------------------

sqlParser::WhereConditionsContext::WhereConditionsContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

std::vector<sqlParser::WhereConditionContext *> sqlParser::WhereConditionsContext::whereCondition() {
  return getRuleContexts<sqlParser::WhereConditionContext>();
}

sqlParser::WhereConditionContext* sqlParser::WhereConditionsContext::whereCondition(size_t i) {
  return getRuleContext<sqlParser::WhereConditionContext>(i);
}

std::vector<sqlParser::WhereOPContext *> sqlParser::WhereConditionsContext::whereOP() {
  return getRuleContexts<sqlParser::WhereOPContext>();
}

sqlParser::WhereOPContext* sqlParser::WhereConditionsContext::whereOP(size_t i) {
  return getRuleContext<sqlParser::WhereOPContext>(i);
}


size_t sqlParser::WhereConditionsContext::getRuleIndex() const {
  return sqlParser::RuleWhereConditions;
}

void sqlParser::WhereConditionsContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<sqlParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterWhereConditions(this);
}

void sqlParser::WhereConditionsContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<sqlParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitWhereConditions(this);
}


antlrcpp::Any sqlParser::WhereConditionsContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<sqlParserVisitor*>(visitor))
    return parserVisitor->visitWhereConditions(this);
  else
    return visitor->visitChildren(this);
}

sqlParser::WhereConditionsContext* sqlParser::whereConditions() {
  WhereConditionsContext *_localctx = _tracker.createInstance<WhereConditionsContext>(_ctx, getState());
  enterRule(_localctx, 16, sqlParser::RuleWhereConditions);
  size_t _la = 0;

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(108);
    whereCondition();
    setState(114);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while (_la == sqlParser::AND) {
      setState(109);
      whereOP();
      setState(110);
      whereCondition();
      setState(116);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- WhereConditionContext ------------------------------------------------------------------

sqlParser::WhereConditionContext::WhereConditionContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

sqlParser::ColumnNameContext* sqlParser::WhereConditionContext::columnName() {
  return getRuleContext<sqlParser::ColumnNameContext>(0);
}

sqlParser::OpContext* sqlParser::WhereConditionContext::op() {
  return getRuleContext<sqlParser::OpContext>(0);
}

sqlParser::LiteralContext* sqlParser::WhereConditionContext::literal() {
  return getRuleContext<sqlParser::LiteralContext>(0);
}


size_t sqlParser::WhereConditionContext::getRuleIndex() const {
  return sqlParser::RuleWhereCondition;
}

void sqlParser::WhereConditionContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<sqlParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterWhereCondition(this);
}

void sqlParser::WhereConditionContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<sqlParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitWhereCondition(this);
}


antlrcpp::Any sqlParser::WhereConditionContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<sqlParserVisitor*>(visitor))
    return parserVisitor->visitWhereCondition(this);
  else
    return visitor->visitChildren(this);
}

sqlParser::WhereConditionContext* sqlParser::whereCondition() {
  WhereConditionContext *_localctx = _tracker.createInstance<WhereConditionContext>(_ctx, getState());
  enterRule(_localctx, 18, sqlParser::RuleWhereCondition);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(117);
    columnName();
    setState(118);
    op();
    setState(119);
    literal();
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- WhereOPContext ------------------------------------------------------------------

sqlParser::WhereOPContext::WhereOPContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* sqlParser::WhereOPContext::AND() {
  return getToken(sqlParser::AND, 0);
}


size_t sqlParser::WhereOPContext::getRuleIndex() const {
  return sqlParser::RuleWhereOP;
}

void sqlParser::WhereOPContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<sqlParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterWhereOP(this);
}

void sqlParser::WhereOPContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<sqlParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitWhereOP(this);
}


antlrcpp::Any sqlParser::WhereOPContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<sqlParserVisitor*>(visitor))
    return parserVisitor->visitWhereOP(this);
  else
    return visitor->visitChildren(this);
}

sqlParser::WhereOPContext* sqlParser::whereOP() {
  WhereOPContext *_localctx = _tracker.createInstance<WhereOPContext>(_ctx, getState());
  enterRule(_localctx, 20, sqlParser::RuleWhereOP);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(121);
    match(sqlParser::AND);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- DropIndexQueryContext ------------------------------------------------------------------

sqlParser::DropIndexQueryContext::DropIndexQueryContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* sqlParser::DropIndexQueryContext::DROP() {
  return getToken(sqlParser::DROP, 0);
}

tree::TerminalNode* sqlParser::DropIndexQueryContext::INDEX() {
  return getToken(sqlParser::INDEX, 0);
}

sqlParser::IndexNameContext* sqlParser::DropIndexQueryContext::indexName() {
  return getRuleContext<sqlParser::IndexNameContext>(0);
}


size_t sqlParser::DropIndexQueryContext::getRuleIndex() const {
  return sqlParser::RuleDropIndexQuery;
}

void sqlParser::DropIndexQueryContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<sqlParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterDropIndexQuery(this);
}

void sqlParser::DropIndexQueryContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<sqlParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitDropIndexQuery(this);
}


antlrcpp::Any sqlParser::DropIndexQueryContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<sqlParserVisitor*>(visitor))
    return parserVisitor->visitDropIndexQuery(this);
  else
    return visitor->visitChildren(this);
}

sqlParser::DropIndexQueryContext* sqlParser::dropIndexQuery() {
  DropIndexQueryContext *_localctx = _tracker.createInstance<DropIndexQueryContext>(_ctx, getState());
  enterRule(_localctx, 22, sqlParser::RuleDropIndexQuery);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(123);
    match(sqlParser::DROP);
    setState(124);
    match(sqlParser::INDEX);
    setState(125);
    indexName();
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}
